Fixing styles on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
   padding: 0;
-  font-size: 14px;
   font-family: Helvetica, Arial, sans-serif;
   background: rgb(250, 250, 250);
   color: rgb(60, 60, 60);
@@ -56,4 +55,33 @@ a {
 
 a:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 640px) {
+  header {
+    /*text-align: center;*/
+    margin: -116px 0 0 -156px;
+  }
+
+  header .small {
+    font-size: 36px;
+  }
+
+  h1, h2, h3 {
+    font-family: Oswald, Helvetica, Arial, sans-serif;
+    margin: 0;
+    font-weight: 300;
+  }
+
+  h1 {
+    font-size: 28px;
+  }
+
+  h2 {
+    font-size: 40px;
+  }
+
+  h3 {
+    font-size: 20px;
+  }
 }
